--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,18 @@
-<html>
-Test
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link type="text/css" href="/css/style.css" media="all" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  </head>
+  <body>
+    <table>
+      <tr><th>Might</th>      <td><input type="text" name="might"> </td></tr>
+      <tr><th>Kills</th>      <td><input type="text" name="kills"> </td></tr>
+      <tr><th>Stone Sent</th> <td><input type="text" name="stone"> </td></tr>
+      <tr><th>Timber Sent</th><td><input type="text" name="timber"></td></tr>
+      <tr><th>Ore Sent</th>   <td><input type="text" name="ore">   </td></tr>
+    </table>
+    <input type="button" name="calc" value="Calculate">
+  </body>
 </html>
+      
