--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,9 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link type="text/css" href="/css/style.css" media="all" rel="stylesheet">
+    <link type="text/css" href="style.css" media="all" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <table>
@@ -13,6 +14,7 @@
       <tr><th>Ore Sent</th>   <td><input type="text" name="ore">   </td></tr>
     </table>
     <input type="button" name="calc" value="Calculate">
+    <div id="result"></div>
   </body>
 </html>
       
