--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <table>
-      <tr><th>Might</th>      <td><input type="text" name="might"  zvalue="55688082"></td></tr>
-      <tr><th>Kills</th>      <td><input type="text" name="kills"  zvalue="3532410"> </td></tr>
-      <tr><th>Stone Sent</th> <td><input type="text" name="stone"  zvalue="74541156"></td></tr>
-      <tr><th>Timber Sent</th><td><input type="text" name="timber" zvalue="68267882"></td></tr>
-      <tr><th>Ore Sent</th>   <td><input type="text" name="ore"    zvalue="59370099"></td></tr>
-      <tr><th>Help Sent</th>  <td><input type="text" name="helps"  zvalue="7984">    </td></tr>
-    </table>
-    <input type="button" name="calc" value="Calculate">
-    <div id="result"></div>
+    <div id="dinosaur">
+      <table>
+        <tr><th>Might</th>      <td><input type="text" name="might"  zvalue="55688082"></td></tr>
+        <tr><th>Kills</th>      <td><input type="text" name="kills"  zvalue="3532410"> </td></tr>
+        <tr><th>Stone Sent</th> <td><input type="text" name="stone"  zvalue="74541156"></td></tr>
+        <tr><th>Timber Sent</th><td><input type="text" name="timber" zvalue="68267882"></td></tr>
+        <tr><th>Ore Sent</th>   <td><input type="text" name="ore"    zvalue="59370099"></td></tr>
+        <tr><th>Help Sent</th>  <td><input type="text" name="helps"  zvalue="7984">    </td></tr>
+      </table>
+      <input type="button" name="calc" value="Calculate">
+      <div id="result"></div>
+    </div>
   </body>
 </html>
       
